--- a/Seance11/seance.ipynb
+++ b/Seance11/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "under-terminal",
+   "id": "forced-welding",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stuffed-niger",
+   "id": "polar-reach",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "catholic-nothing",
+   "id": "assured-university",
    "metadata": {},
    "outputs": [
     {
@@ -216,8 +216,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "funny-liver",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31610"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(discours)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "foster-assessment",
+   "id": "modern-republic",
    "metadata": {},
    "source": [
     "## Etape de préprocessing\n",
@@ -225,7 +246,7 @@
     "1. Enlever les sauts de lignes.\n",
     "2. Transformer les majuscules en minuscules. -> 10h45\n",
     "3. Suppression des caractères *spéciaux*. -> 11h05\n",
-    "4. Remplacer les suites de caractères *blancs* par **un** espace. \n",
+    "4. Remplacer les suites de caractères *blancs* par **un** espace. -> 11h30\n",
     "5. Découper suivant les espaces.\n",
     "\n",
     "**ATTENTION** on va faire le choix de ne pas travailler directement sur la variable `discours` mais de coder des fonctions prenant en entrée une chaine de caractères et en renvoyant une nouvelle.\n",
@@ -234,133 +255,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "prompt-distribution",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__add__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__getnewargs__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__mod__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__rmod__',\n",
-       " '__rmul__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'capitalize',\n",
-       " 'casefold',\n",
-       " 'center',\n",
-       " 'count',\n",
-       " 'encode',\n",
-       " 'endswith',\n",
-       " 'expandtabs',\n",
-       " 'find',\n",
-       " 'format',\n",
-       " 'format_map',\n",
-       " 'index',\n",
-       " 'isalnum',\n",
-       " 'isalpha',\n",
-       " 'isascii',\n",
-       " 'isdecimal',\n",
-       " 'isdigit',\n",
-       " 'isidentifier',\n",
-       " 'islower',\n",
-       " 'isnumeric',\n",
-       " 'isprintable',\n",
-       " 'isspace',\n",
-       " 'istitle',\n",
-       " 'isupper',\n",
-       " 'join',\n",
-       " 'ljust',\n",
-       " 'lower',\n",
-       " 'lstrip',\n",
-       " 'maketrans',\n",
-       " 'partition',\n",
-       " 'replace',\n",
-       " 'rfind',\n",
-       " 'rindex',\n",
-       " 'rjust',\n",
-       " 'rpartition',\n",
-       " 'rsplit',\n",
-       " 'rstrip',\n",
-       " 'split',\n",
-       " 'splitlines',\n",
-       " 'startswith',\n",
-       " 'strip',\n",
-       " 'swapcase',\n",
-       " 'title',\n",
-       " 'translate',\n",
-       " 'upper',\n",
-       " 'zfill']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 8,
+   "id": "weird-folks",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "dir(str)"
+    "from auxiliaire import genere_liste_mots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "statutory-brick",
+   "execution_count": 9,
+   "id": "atmospheric-waterproof",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste_mots = genere_liste_mots(discours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "personalized-maine",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m Return a copy of the string converted to lowercase.\n",
-       "\u001b[0;31mType:\u001b[0m      method_descriptor\n"
+       "5374"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "str.lower?"
+    "len(liste_mots)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acknowledged-trout",
+   "metadata": {},
+   "source": [
+    "# Exercice complémentaire sur le preprocessing\n",
+    "\n",
+    "- On pourrait passer en privé toutes les fonctions hormis `genere_liste_mots`.\n",
+    "- On pourrait documenter la librairie avec des exemples.\n",
+    "- On pourrait faire un **stress test** pour insérer des erreurs artificielles et ajouter des tests permettant de les détecter.\n",
+    "- On peut améliorer le code pour inclure les chiffres dans les caractères autorisés."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "parallel-tournament",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "1. Générer le graphe. -> 12h05\n",
+    "2. Faites en une visualisation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "understanding-modern",
+   "id": "mathematical-spyware",
    "metadata": {},
    "outputs": [],
    "source": []
