--- a/Seance11/seance.ipynb
+++ b/Seance11/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "forced-welding",
+   "id": "quality-hardwood",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "polar-reach",
+   "id": "national-emerald",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "assured-university",
+   "id": "terminal-science",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "funny-liver",
+   "id": "capital-basics",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modern-republic",
+   "id": "danish-azerbaijan",
    "metadata": {},
    "source": [
     "## Etape de préprocessing\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "weird-folks",
+   "id": "danish-elite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "atmospheric-waterproof",
+   "id": "awful-malaysia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "personalized-maine",
+   "id": "corporate-stand",
    "metadata": {},
    "outputs": [
     {
@@ -295,8 +295,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "partial-shanghai",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1517"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(liste_mots))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "acknowledged-trout",
+   "id": "actual-stuff",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** on aura 1517 sommets et 5373 arrêtes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "optical-multiple",
    "metadata": {},
    "source": [
     "# Exercice complémentaire sur le preprocessing\n",
@@ -309,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-tournament",
+   "id": "individual-stage",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -320,11 +349,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "mathematical-spyware",
+   "execution_count": 11,
+   "id": "light-southwest",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import networkx as nx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dietary-benefit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mots = nx.DiGraph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "changed-flavor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for premier, deuxieme in zip(liste_mots[:-1], liste_mots[1:]):\n",
+    "    if (premier, deuxieme) in mots.edges:\n",
+    "        mots.edges[(premier, deuxieme)][\"weight\"] = mots.edges[(premier, deuxieme)][\"weight\"] + 1\n",
+    "    else:\n",
+    "        mots.add_edge(premier, deuxieme, weight=1)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compressed-locking",
+   "metadata": {},
+   "source": [
+    "# Exercice complémentaire\n",
+    "\n",
+    "1. Faire visualisation avec networkx natif et avec le sous module graphviz.\n",
+    "2. Reprenez les fonctions pour générer les couples de mots et les calculs du nombre de mots et d'arrêtes pour les mettre dans la bibliothèque `auxiliaire`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "wound-marketplace",
+   "metadata": {},
+   "source": [
+    "# Prochaines Séances\n",
+    "\n",
+    "1. Problème de flux maximal.\n",
+    "2. Problème d'ordonnancement.\n",
+    "3. Programmation linéaire.\n",
+    "4. Création de Dashboard.\n",
+    "\n",
+    "# Pours les projets\n",
+    "\n",
+    "- Office hours TEAMS sur les créneaux de cours après la dernière séance\n",
+    "- 1 ou 2 séances de 2h en salle (présentiel) ou vous travailler et je suis présent."
+   ]
   }
  ],
  "metadata": {
