--- a/Seance12/seance.ipynb
+++ b/Seance12/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cognitive-lesson",
+   "id": "electrical-independence",
    "metadata": {},
    "source": [
     "# Problème de flot maximal\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signed-moment",
+   "id": "ancient-depth",
    "metadata": {},
    "source": [
     "## Définition\n",
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bottom-johnston",
+   "id": "perceived-celebration",
    "metadata": {},
    "source": [
     "## Exemple\n",
     "\n",
-    "<img src=\"./dag_capacite.svg\" height=\"100\"/>"
+    "<img src=\"./dag_capacite.svg\" alt=\"graphe avec capacité\" width=\"800\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hispanic-detector",
+   "id": "gentle-malaysia",
    "metadata": {},
    "source": [
-    "### Exercice\n",
+    "### Exercice -> 10h35\n",
     "\n",
     "- Quelles sont les arrêtes rentrantes et sortantes associées à $F$?\n",
     "- Donner un flot admissible sur ce graphe."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medical-carnival",
+   "id": "consolidated-ghana",
    "metadata": {},
    "outputs": [],
    "source": []
