--- a/Seance12/seance.ipynb
+++ b/Seance12/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "electrical-independence",
+   "id": "together-timer",
    "metadata": {},
    "source": [
     "# Problème de flot maximal\n",
@@ -12,24 +12,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-depth",
+   "id": "universal-charter",
    "metadata": {},
    "source": [
     "## Définition\n",
     "\n",
     "Soit $(V, E)$ un graphe pondéré positivement par une fonction $C$ (**Capacite**).\n",
-    "- On se donne deux noeuds particulier dans le graphe qu'on appelera la  $S$ (**Source**) et $P$ (**Puit**)\n",
-    "On appelle flot admissible une fonction $F$ (**Flot**) sur les arrêtes vérifiant les conditions suivantes:\n",
+    "On se donne deux noeuds particulier dans le graphe qu'on appelera la  $S$ (**Source**) et $P$ (**Puit**)\n",
+    "- On appelle flot admissible une fonction $F$ (**Flot**) sur les arrêtes vérifiant les conditions suivantes:\n",
     "$$\\forall e \\in E,\\qquad 0\\leq F(e) \\leq C(e).$$\n",
-    "$$\\forall v \\in V\\qquad \\sum_{e\\in \\mathcal{E}(v)} F(e) = \\sum_{e\\in \\mathcal{S}(v)} F(e).$$\n",
+    "$$\\forall v \\in V\\setminus\\{S, P\\}\\qquad \\sum_{e\\in \\mathcal{E}(v)} F(e) = \\sum_{e\\in \\mathcal{S}(v)} F(e).$$\n",
     "avec $\\mathcal{E}(v):=\\{(a, b) \\in E\\quad :\\quad b=v\\}$, $\\mathcal{S}(v):=\\{(a, b) \\in E\\quad :\\quad a=v\\}$\n",
-    "\n",
-    "- Le problème du flot maximal est de trouver un flot admissible tel que la somme des flots sortant moins la somme des flots rentrant à $S$ soit maximale.\n"
+    "- On dira qu'un flot admissible est maximal si la quantitée suivante l'est:\n",
+    "$$\\sum_{e\\in \\mathcal{E}(P)} F(e) - \\sum_{e\\in \\mathcal{S}(P)}F(e)$$\n",
+    "**ATTENTION** on reformulera généralement le problème avec des arrêtes fictives."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "perceived-celebration",
+   "id": "aquatic-spanking",
+   "metadata": {},
+   "source": [
+    "# Exemple/Exercice\n",
+    "\n",
+    "Rajouter les arguments pour justifier les légendes des images.\n",
+    "\n",
+    "**CAPACITES**\n",
+    "<img src=\"elementaire.svg\" width=\"600\">\n",
+    "\n",
+    "**FLOT TRIVIAL**\n",
+    "<img src=\"elementaire_trivial.svg\" width=\"600\">\n",
+    "\n",
+    "**FLOT ADMISSIBLE**\n",
+    "<img src=\"elementaire_admissible.svg\" width=\"600\">\n",
+    "\n",
+    "**FLOT NON ADMISSIBLE**\n",
+    "<img src=\"elementaire_non_admissible.svg\" width=\"600\">\n",
+    "\n",
+    "**FLOT MAXIMAL**\n",
+    "<img src=\"elementaire_maximal.svg\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "going-remove",
    "metadata": {},
    "source": [
     "## Exemple\n",
@@ -39,19 +65,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gentle-malaysia",
+   "id": "personalized-handy",
    "metadata": {},
    "source": [
     "### Exercice -> 10h35\n",
     "\n",
     "- Quelles sont les arrêtes rentrantes et sortantes associées à $F$?\n",
-    "- Donner un flot admissible sur ce graphe."
+    "$$\\mathcal{E}(F)= \\{(B,F),\\quad (D,F)\\quad, (E,F)\\}$$\n",
+    "$$\\mathcal{S}(F)= \\{(F, C),\\quad (F, G)\\}$$\n",
+    "\n",
+    "- Donner un flot admissible sur ce graphe.\n",
+    "\n",
+    "Il suffit d'utiliser la fonction $F$ constante égale à $0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "humanitarian-belfast",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** \n",
+    "- On a rajouter des arrêtes fictives sur le dessin (celles avec des capacités valant $?$). L'une sort du puit $I$ l'autre rentre dans la source $A$.\n",
+    "- On peut alors reformuler le problème du flot maximal en demandant que la loi des noeuds s'appliquent également à la source et au puit, mais on cherche à maximiser les flots sur ces arrêtes fictives."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "consolidated-ghana",
+   "id": "nonprofit-place",
    "metadata": {},
    "outputs": [],
    "source": []
