--- a/Seance12/seance.ipynb
+++ b/Seance12/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "together-timer",
+   "id": "historical-production",
    "metadata": {},
    "source": [
     "# Problème de flot maximal\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "universal-charter",
+   "id": "instant-japanese",
    "metadata": {},
    "source": [
     "## Définition\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aquatic-spanking",
+   "id": "august-samoa",
    "metadata": {},
    "source": [
     "# Exemple/Exercice\n",
@@ -39,15 +39,43 @@
     "\n",
     "**CAPACITES**\n",
     "<img src=\"elementaire.svg\" width=\"600\">\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conceptual-benjamin",
+   "metadata": {},
+   "source": [
     "**FLOT TRIVIAL**\n",
     "<img src=\"elementaire_trivial.svg\" width=\"600\">\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "thousand-forge",
+   "metadata": {},
+   "source": [
     "**FLOT ADMISSIBLE**\n",
-    "<img src=\"elementaire_admissible.svg\" width=\"600\">\n",
+    "<img src=\"elementaire_admissible.svg\" width=\"600\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "necessary-raising",
+   "metadata": {},
+   "source": [
     "\n",
     "**FLOT NON ADMISSIBLE**\n",
-    "<img src=\"elementaire_non_admissible.svg\" width=\"600\">\n",
+    "<img src=\"elementaire_non_admissible.svg\" width=\"600\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "creative-forward",
+   "metadata": {},
+   "source": [
     "\n",
     "**FLOT MAXIMAL**\n",
     "<img src=\"elementaire_maximal.svg\" width=\"600\">"
@@ -55,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "going-remove",
+   "id": "accessory-provision",
    "metadata": {},
    "source": [
     "## Exemple\n",
@@ -65,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "personalized-handy",
+   "id": "prompt-exclusion",
    "metadata": {},
    "source": [
     "### Exercice -> 10h35\n",
@@ -81,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "humanitarian-belfast",
+   "id": "connected-speed",
    "metadata": {},
    "source": [
     "**REMARQUE** \n",
@@ -92,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nonprofit-place",
+   "id": "fatal-mirror",
    "metadata": {},
    "outputs": [],
    "source": []
