--- a/Seance12/seance.ipynb
+++ b/Seance12/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "historical-production",
+   "id": "hydraulic-threat",
    "metadata": {},
    "source": [
     "# Problème de flot maximal\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instant-japanese",
+   "id": "later-basis",
    "metadata": {},
    "source": [
     "## Définition\n",
@@ -30,10 +30,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "august-samoa",
+   "id": "split-pleasure",
    "metadata": {},
    "source": [
-    "# Exemple/Exercice\n",
+    "# Exemple/Exercice -> 11h15\n",
     "\n",
     "Rajouter les arguments pour justifier les légendes des images.\n",
     "\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conceptual-benjamin",
+   "id": "worst-presentation",
    "metadata": {},
    "source": [
     "**FLOT TRIVIAL**\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thousand-forge",
+   "id": "suffering-berlin",
    "metadata": {},
    "source": [
     "**FLOT ADMISSIBLE**\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "necessary-raising",
+   "id": "monetary-family",
    "metadata": {},
    "source": [
     "\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "creative-forward",
+   "id": "stopped-amber",
    "metadata": {},
    "source": [
     "\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessory-provision",
+   "id": "royal-statistics",
    "metadata": {},
    "source": [
     "## Exemple\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prompt-exclusion",
+   "id": "competitive-college",
    "metadata": {},
    "source": [
     "### Exercice -> 10h35\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "connected-speed",
+   "id": "african-confirmation",
    "metadata": {},
    "source": [
     "**REMARQUE** \n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fatal-mirror",
+   "id": "popular-primary",
    "metadata": {},
    "outputs": [],
    "source": []
