--- a/Seance12/seance.ipynb
+++ b/Seance12/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "hydraulic-threat",
+   "id": "affected-initial",
    "metadata": {},
    "source": [
     "# Problème de flot maximal\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "later-basis",
+   "id": "lesbian-sydney",
    "metadata": {},
    "source": [
     "## Définition\n",
@@ -30,70 +30,96 @@
   },
   {
    "cell_type": "markdown",
-   "id": "split-pleasure",
+   "id": "expected-carol",
    "metadata": {},
    "source": [
     "# Exemple/Exercice -> 11h15\n",
     "\n",
     "Rajouter les arguments pour justifier les légendes des images.\n",
     "\n",
-    "**CAPACITES**\n",
-    "<img src=\"elementaire.svg\" width=\"600\">\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "worst-presentation",
+   "id": "infinite-correlation",
+   "metadata": {},
+   "source": [
+    "**CAPACITES**\n",
+    "\n",
+    "<img src=\"elementaire.svg\" width=\"600\">\n",
+    "\n",
+    "\n",
+    "On a des poids positifs sur toutes les arrêtes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "delayed-raleigh",
    "metadata": {},
    "source": [
     "**FLOT TRIVIAL**\n",
+    "\n",
     "<img src=\"elementaire_trivial.svg\" width=\"600\">\n",
-    "\n"
+    "\n",
+    "Il est admissible car rien ne sort ni ne rentre à chaque sommet et $0=0$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "suffering-berlin",
+   "id": "ecological-rocket",
    "metadata": {},
    "source": [
     "**FLOT ADMISSIBLE**\n",
-    "<img src=\"elementaire_admissible.svg\" width=\"600\">\n"
+    "\n",
+    "<img src=\"elementaire_admissible.svg\" width=\"600\">\n",
+    "\n",
+    "En $C$ on $5=2+3$ et en $C$ on a $3+2=5$.\n",
+    "\n",
+    "**REMARQUE** Flot sortant de la source vaut $8$ comme le flot rentrant du puit!"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "monetary-family",
+   "id": "rural-authentication",
    "metadata": {},
    "source": [
-    "\n",
     "**FLOT NON ADMISSIBLE**\n",
-    "<img src=\"elementaire_non_admissible.svg\" width=\"600\">\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "stopped-amber",
-   "metadata": {},
-   "source": [
     "\n",
-    "**FLOT MAXIMAL**\n",
-    "<img src=\"elementaire_maximal.svg\" width=\"600\">"
+    "<img src=\"elementaire_non_admissible.svg\" width=\"600\">\n",
+    "\n",
+    "Car en $C$ on $5 < 2 + 4$ et en $B$ on a $2 + 4 > 5$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "royal-statistics",
+   "id": "informational-barcelona",
    "metadata": {},
    "source": [
-    "## Exemple\n",
+    "**FLOT MAXIMAL**\n",
+    "\n",
+    "<img src=\"elementaire_maximal.svg\" width=\"600\">\n",
+    "\n",
+    "Le flot est admissible car \n",
+    "- en $C$: $5=1+4$\n",
+    "- en $B$: $4+1=5$\n",
+    "\n",
+    "Il est maximal car le flot sur les arrêtes sortantes de la source sont égaux aux capacités."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "attempted-growth",
+   "metadata": {},
+   "source": [
+    "# Exemple plus compliqué\n",
     "\n",
     "<img src=\"./dag_capacite.svg\" alt=\"graphe avec capacité\" width=\"800\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "competitive-college",
+   "id": "sunrise-cartridge",
    "metadata": {},
    "source": [
     "### Exercice -> 10h35\n",
@@ -109,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "african-confirmation",
+   "id": "affected-original",
    "metadata": {},
    "source": [
     "**REMARQUE** \n",
@@ -118,9 +144,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "incorrect-corrections",
+   "metadata": {},
+   "source": [
+    "## Exercice -> 11h30\n",
+    "\n",
+    "Déterminer le flot maximal du graphe ci-dessus."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "popular-primary",
+   "id": "particular-mortality",
    "metadata": {},
    "outputs": [],
    "source": []
