--- a/Seance12/seance.ipynb
+++ b/Seance12/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "affected-initial",
+   "id": "demographic-occurrence",
    "metadata": {},
    "source": [
     "# Problème de flot maximal\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesbian-sydney",
+   "id": "strong-jerusalem",
    "metadata": {},
    "source": [
     "## Définition\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expected-carol",
+   "id": "alleged-neighborhood",
    "metadata": {},
    "source": [
     "# Exemple/Exercice -> 11h15\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infinite-correlation",
+   "id": "detected-hudson",
    "metadata": {},
    "source": [
     "**CAPACITES**\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "delayed-raleigh",
+   "id": "placed-wichita",
    "metadata": {},
    "source": [
     "**FLOT TRIVIAL**\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecological-rocket",
+   "id": "short-foundation",
    "metadata": {},
    "source": [
     "**FLOT ADMISSIBLE**\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-authentication",
+   "id": "horizontal-romantic",
    "metadata": {},
    "source": [
     "**FLOT NON ADMISSIBLE**\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-barcelona",
+   "id": "turned-writer",
    "metadata": {},
    "source": [
     "**FLOT MAXIMAL**\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attempted-growth",
+   "id": "quantitative-sharing",
    "metadata": {},
    "source": [
     "# Exemple plus compliqué\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunrise-cartridge",
+   "id": "valid-pacific",
    "metadata": {},
    "source": [
     "### Exercice -> 10h35\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affected-original",
+   "id": "oriented-mercury",
    "metadata": {},
    "source": [
     "**REMARQUE** \n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorrect-corrections",
+   "id": "charged-wheel",
    "metadata": {},
    "source": [
     "## Exercice -> 11h30\n",
@@ -154,12 +154,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "particular-mortality",
+   "cell_type": "markdown",
+   "id": "solid-glasgow",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"./dag_maximal.svg\" alt=\"flot maximal\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adolescent-clear",
+   "metadata": {},
+   "source": [
+    "Cas plus délicat car la maximalité ne peut plus être prouvé de la même façon\n",
+    "\n",
+    "<img src=\"./dag_plus_delicat.svg\" alt=\"flot maximal?\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "narrow-bullet",
+   "metadata": {},
+   "source": [
+    "## Exercice\n",
+    "\n",
+    "Utiliser `networkx` pour résoudre le pr"
+   ]
   }
  ],
  "metadata": {
