--- a/Seance13/seance.ipynb
+++ b/Seance13/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sound-elite",
+   "id": "eleven-night",
    "metadata": {},
    "source": [
     "# Programmation linéaire"
@@ -10,7 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-amateur",
+   "id": "contained-permit",
+   "metadata": {},
+   "source": [
+    "## Flot Maximal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acting-acrobat",
    "metadata": {},
    "source": [
     "<img src=\"./elementaire.svg\" width=\"600\">"
@@ -18,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "about-setting",
+   "id": "impressed-combine",
    "metadata": {},
    "source": [
     "**VARIABLES**\n",
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conscious-season",
+   "id": "blond-disability",
    "metadata": {},
    "source": [
     "**CONTRAINTES ARRETES**\n",
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "featured-marijuana",
+   "id": "affiliated-description",
    "metadata": {},
    "source": [
     "**CONTRAINTES NOEUDS** sauf à la source $A$, et au puit $D$\n",
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "united-title",
+   "id": "seeing-dispatch",
    "metadata": {},
    "source": [
     "**OBJECTIF**\n",
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "native-pierce",
+   "id": "endangered-appendix",
    "metadata": {},
    "source": [
     "**REMARQUE** \n",
@@ -83,22 +91,117 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-sugar",
+   "id": "optional-mediterranean",
    "metadata": {},
    "source": [
     "**CALCUL EQUIVALENCE**\n",
+    "5 min -> 10h35\n",
+    "\n",
     "Pourquoi a-t-on \n",
     "$$q_{AB} + q_{AC} = q_{BD} + q_{CD}$$\n",
     "lorsque les contraintes sont satisfaites?"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "decent-rates",
+   "metadata": {},
+   "source": [
+    "**ETAPE 1** on ajoute toutes les égalités aux noeuds.\n",
+    "\n",
+    "$$\n",
+    "q_{AB} + q_{CB} + q_{AC} = q_{BD} + q_{CB} + q_{CD}\n",
+    "$$\n",
+    "\n",
+    "**ETAPE 2** on élimine les quantités présentes des deux côtés\n",
+    "$$\n",
+    "q_{AB} + q_{AC} = q_{BD} + q_{CD}\n",
+    "$$\n",
+    "\n",
+    "**COMPLEMENT** expliquer pourquoi cette démarche marche de manière générale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acute-taxation",
+   "metadata": {},
+   "source": [
+    "## Reformulation\n",
+    "\n",
+    "On introduit des arrêtes artificielles entrant dans la source et sortant du puit.\n",
+    "\n",
+    "<img src=\"./elementaire_bis.svg\" width=\"600\">\n",
+    "\n",
+    "**VARIABLES**\n",
+    "\n",
+    "$q_s, q_{AB}, q_{AC},q_{BD},q_{CB},q_{CD}, q_p$\n",
+    "\n",
+    "**CONTRAINTES ARRETES**\n",
+    "\n",
+    "\\begin{align}\n",
+    "&0\\leq q_s&\\\\\n",
+    "&0 \\leq q_{AB} \\leq 4 &\\text{ arrete } AB\\\\\n",
+    "&0 \\leq q_{AC} \\leq 5 &\\text{ arrete } AC\\\\\n",
+    "&0 \\leq q_{BD} \\leq 5 &\\text{ arrete } BD\\\\\n",
+    "&0 \\leq q_{CB} \\leq 2 &\\text{ arrete } CB\\\\\n",
+    "&0 \\leq q_{CD} \\leq 4 &\\text{ arrete } CD\\\\\n",
+    "&0\\leq q_p&\n",
+    "\\end{align}\n",
+    "\n",
+    "**CONTRAINTES NOEUDS**\n",
+    "\n",
+    "\\begin{align}\n",
+    "&q_s = q_{AB} + q_{AC} &\\text{ au noeud } A\\\\\n",
+    "&q_{AB} + q_{CB} = q_{BD} &\\text{ au noeud } B\\\\\n",
+    "&q_{AC} = q_{CB} + q_{CD} &\\text{ au noeud } C\\\\\n",
+    "& q_{BD} + q_{CD} = q_p &\\text{ au noeud } D\n",
+    "\\end{align}\n",
+    "\n",
+    "**OBJECTIF**\n",
+    "\n",
+    "$$\\max q_s$$\n",
+    "ou de manière équivalente (là encore il suffit de sommet toutes les égalités aux sommets)\n",
+    "$$\\max q_p$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "atomic-identity",
+   "metadata": {},
+   "source": [
+    "## Résolution avec `scipy`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "viral-motion",
+   "execution_count": 1,
+   "id": "affiliated-steering",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.optimize import linprog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "objective-department",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "secondary-celtic",
+   "metadata": {},
+   "source": [
+    "### Exercice\n",
+    "10min -> 11h\n",
+    "\n",
+    "Résolvez les programmes linéaires ci-dessus avec `linprog`.\n"
+   ]
   }
  ],
  "metadata": {
